# neonlicht

./: .gitignore  Makefile  README.md  clear_cinfigure.sh  configure.ac  neonlicht_dox_config  neonlicht_dox_helix_congig  neonlicht_dox_raspi_config
doc/: .~lock.Konzeption-first.odt#  .~lock.engine-architecture.odg#  Konzeption-first.odt  _emacs  adsr-state-diagramm.odg  engine-architecture.odg  table-ugen-microseconds.txt
doc/html/: ADSR-NewGen_8h_source.html  ADSRGen_8h_source.html  ADSRWorkshopSPU_8h_source.html  Activator_8h_source.html  AddTwoGen_8h_source.html  ArturiaMiniLabUnit_8h_source.html  CentralStore_8h_source.html  Config2Cpp_8h_source.html  GUI_8h_source.html  (+450 more)
man/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.am~  Makefile.in  MessageData.cpp  MessageData.h  MidiConnector.cpp  MidiConnector.cpp~  MidiConnector.h  Neonlicht.cpp  Neonlicht.cpp~  Neonlicht.h  OscInConnector.cpp  OscInConnector.h  OscOutConnector.h  TestStatic.cpp  TestStatic.h  WaveWriter.h  cmidiin.cpp  kraftmaschine.cpp  output.txt  ugentest.cpp
src/.deps/: GenericThread.Po  MessageData.Po  MidiConnector.Po  Neonlicht.Po  OscInConnector.Po  OscOutConnector.Po  OscSendTests.Po  SimpleReceive.Po  SimpleSend.Po  TestStatic.Po  WaveWriter.Po  cmidiin.Po  crtsine.Po  engine.Po  first.Po  gqueue.Po  kraftmaschine.Po  oscreceive.Po  oscsend.Po  teststatic.Po  ugentest.Po  utilities.Po
src/configuration/: ConfigurationManager.cpp  ConfigurationManager.h  Makefile  demo  main.cpp  neonlicht.cfg
src/configuration/config4cpp/: Makefile  bin
src/configuration/config4cpp/src/: config2cpp  config2cpp-nocheck  config4cpp
src/gui/: GUI.cpp  GUI.h  GUIMapping.cpp  GUIMapping.h  WorkshopGUI.cpp  WorkshopGUI.h
src/include/: ADSR-NewGen.h  ADSRGen.h  ADSRWorkshopSPU.h  ArturiaMiniLabUnit.h  CentralStore.h  ConfigurationManager.h  CosineGen.h  CosineTable.h  EGOneStepGen.h  EGUpDownGen.h  EnvelopeGen.h  GUIMapping.h  GenericQueue.h  Interpolation.h  InvertGen.h  LFOWorkshopSPU.h  MessageData.h  MessageDataQueue.h  MidiConnector.h  MidiInputGen.h  MoogVCFGen.h  MoogVCFv2Gen.h  MultiOscillatorSPU.h  MultiplyGen.h  MultiplyTwoGen.h  Neonlicht.h  NoiseGen.h  NoiseUnit.h  NumberGen.h  OnePoleLPFGen.h  OscActivator.h  OscInConnector.h  OscillatorGen.h  Patch.h  PhasorGen.h  Pulse.h  PulseGen.h  ResCutFilterGen.h  STKAdapterGen.h  STKBiQuadGen.h  (+12 more)
src/osc/: MessageData.cpp  MessageData.h  MidiConnector.cpp  MidiConnector.h  OscInConnector.cpp  OscOutConnector.cpp  OscOutConnector.h
src/outdated/: SimpleReceive.cpp  WaveWriter.cpp  engine.cpp  oscreceive.cpp  oscsend.cpp  teststatic.cpp
src/sequencer/: Activator.cpp  Activator.cpp~  Activator.h  Activator.h~  OscActivator.cpp  OscActivator.cpp~  OscActivator.h  OscActivator.h~  Pulse.cpp  Pulse.cpp~  fliehkraft.cpp  fliehkraft.cpp~
src/sequencer/.deps/: Activator.Po  OscActivator.Po  Pulse.Po  fliehkraft.Po
src/spu/: ADSRWorkshopSPU.cpp  ADSRWorkshopSPU.h  ArturiaMiniLabUnit.cpp  ArturiaMiniLabUnit.h  LFOWorkshopSPU.cpp  MultiOscillatorSPU.cpp  MultiOscillatorSPU.h  MyUnit.cpp  MyUnit.h  NoiseUnit.h  VCOModSPU.cpp  VCOModSPU.h  WorkshopSPU.cpp  WorkshopSPU.h
src/store/: CentralStore.cpp  CentralStore.cpp~  CentralStore.h  CentralStore.h~  GenericQueue.h  GenericThread.cpp  GenericThread.h  MessageDataQueue.cpp  MessageDataQueue.h  OscWrapper.cpp  OscWrapper.h  TickData.h  gqueue  gqueue.cpp  mdqueue.cpp  mdstore.cpp  mdstore.cpp~  oscw  oscw.cpp
src/store/.deps/: CentralStore.Po  GenericThread.Po  MessageDataQueue.Po  OscWrapper.Po  gqueue.Po  mdqueue.Po  mdstore.Po  oscw.Po
src/unit/: ADSR-NewGen.cpp  ADSR-NewGen.h  ADSRGen.cpp  ADSRGen.cpp~  ADSRGen.h  ADSRGen.h~  AddTwoGen.cpp  AddTwoGen.h  ArturiaMiniLabUnit.h  CosineGen.cpp  CosineGen.h  EGOneStepGen.cpp  EGOneStepGen.cpp~  EGOneStepGen.h  EGOneStepGen.h~  EGUpDownGen.cpp  EGUpDownGen.h  EnvelopeGen.cpp  GatedConstantGen.cpp  GatedConstantGen.h  IDGenerator.h  Interpolation.h  InvertGen.cpp  MidiInputGen.cpp  MidiInputGen.h  MoogVCFGen.cpp  MoogVCFv2Gen.cpp  MultiSwitch5Gen.cpp  MultiSwitch5Gen.h  MultiplyGen.cpp  MultiplyGen.cpp~  MultiplyGen.h  MultiplyGen.h~  MultiplyTwoGen.cpp  MultiplyTwoGen.cpp~  MyUnit.cpp  MyUnit.h  NoiseGen.cpp  NoiseGen.h  NoiseUnit.cpp  (+48 more)
src/unit/.deps/: ADSRGen.Po  AddTwoGen.Po  EGOneStepGen.Po  EGUpDownGen.Po  GatedConstantGen.Po  IDGenerator.Po  Interpolation.Po  MultiplyGen.Po  MultiplyTwoGen.Po  NoiseGen.Po  NoiseUnit.Po  NumberGen.Po  OnePoleLPFGen.Po  Patch.Po  PhasorGen.Po  Port.Po  STKAdapterGen.Po  STKBiQuadGen.Po  STKOnePoleGen.Po  STKOneZeroGen.Po  STKTwoPoleGen.Po  STKTwoZeroGen.Po  SawGen.Po  SoundUnit.Po  SquareGen.Po  TwoInputMixerGen.Po  UGen.Po  WaveOutGen.Po
src/util/: CosineTable.cpp  CosineTable.h  IDGenerator.cpp  Interpolation.cpp  KeyPressedControl.cpp  KeyPressedControl.h  MidiUtil.cpp  MidiUtil.h  WaveTable.cpp  WaveTable.h
(+325 files in other folders)
